# app/api/route/agent_route.go
@@ -1,0 +1,14 @@
+package route
+
+import (
+	"esoft/app/api/controller"
+
+	"github.com/gin-gonic/gin"
+)
+
+func NewAgentRouter(agentController *controller.AgentController, group *gin.RouterGroup) {
+	group.POST("agents", agentController.CreateAgent)
+	group.GET("agents", agentController.GetAgents)
+	group.PUT("agents", agentController.UpdateAgent)
+	group.DELETE("agents", agentController.DeleteAgent)
+}
