# docs/swagger.yaml
@@ -1,4 +1,17 @@
 definitions:
+  domain.Agent:
+    properties:
+      commissionShare:
+        type: integer
+      firstName:
+        type: string
+      id:
+        type: integer
+      lastName:
+        type: string
+      middleName:
+        type: string
+    type: object
   domain.Client:
     properties:
       email:
@@ -24,6 +37,112 @@ definitions:
 info:
   contact: {}
 paths:
+  /agents:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: scheme of agent
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Agent'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Agent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+      summary: Delete of agent
+      tags:
+      - Agent
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Agent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+      summary: Get of agents
+      tags:
+      - Agent
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: scheme of agent
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Agent'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Agent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+      summary: Create of agent
+      tags:
+      - Agent
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: scheme of agent
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Agent'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Agent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorMessage'
+      summary: Update of agent
+      tags:
+      - Agent
   /clients:
     delete:
       consumes:
